<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".CrearCuenta">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorSecondaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/atras"
            app:tint="@color/colorSecondary" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/creacion_de_cuenta"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llHeader" />

    <TextView
        android:id="@+id/tvSelecciona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/selecciona_tu_rango"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <LinearLayout
        android:id="@+id/llDocument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelecciona">
            <RadioButton
                android:id="@+id/rbBasico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/basico" />

            <RadioButton
                android:id="@+id/rbPro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profesional" />
            <RadioButton
                android:id="@+id/rbAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/administrador" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvNumeroDocument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/n_usuario"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDocument" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNumeroDocument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumeroDocument">

        <EditText
            android:id="@+id/etDocument"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="username"
            android:hint="@string/n_usuario"
            android:textColor="@color/black"
            android:background="@color/colorSecondaryDark"
            android:inputType="text" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvDataNaixement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/c_usuario"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvNumeroDocument" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDataNaixement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDataNaixement">

        <EditText
            android:id="@+id/etDataNaixement"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="date"
            android:hint="@string/c_usuario"
            android:textColor="@color/colorSecondary"
            android:background="@color/colorSecondaryDark"
            android:inputType="text"/>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorSecondary"
        android:text="@string/acceder"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvDataNaixement" />

</androidx.constraintlayout.widget.ConstraintLayout>