<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearForo">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginStart="16dp"
            android:src="@mipmap/ic_logo"
            android:contentDescription="@string/CDlogo"
            />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/lig_of_leyends"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_menu_24"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/CDdesplegable"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/que_haces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/desc_crear_foro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu" />

</androidx.constraintlayout.widget.ConstraintLayout>