<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaginaPrincipal">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/menu"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Logo a la izquierda -->
        <ImageView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginStart="16dp"
            android:src="@mipmap/ic_logo"
            android:contentDescription="@string/CDlogo"
            />

        <!-- Título centrado -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/lig_of_leyends"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="35sp" />

        <!-- Menú a la derecha -->
        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_menu_24"
            android:contentDescription="@string/CDdesplegable"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"/>


    </androidx.appcompat.widget.Toolbar>
</androidx.constraintlayout.widget.ConstraintLayout>